Cadastro de cliente OK

--- a/src/app/views/main/main.component.html
+++ b/src/app/views/main/main.component.html
@@ -37,6 +37,10 @@
                 <i class="material-icons" style="margin-right: 10px">loyalty</i>
                 Peça
             </a>
+            <a class="ui-list-item" uiRipple routerLink="cliente">
+                <i class="material-icons" style="margin-right: 10px">assignment_ind</i>
+                Cliente
+            </a>
         </div>
     </div>
 </ui-nav-drawer>
