Reconhecimento de clientes OK

--- a/src/app/views/main/main.component.html
+++ b/src/app/views/main/main.component.html
@@ -41,6 +41,10 @@
                 <i class="material-icons" style="margin-right: 10px">assignment_ind</i>
                 Cliente
             </a>
+            <a class="ui-list-item" uiRipple routerLink="reconhecimento">
+                <i class="material-icons" style="margin-right: 10px">videocam</i>
+                Reconhecimento
+            </a>
         </div>
     </div>
 </ui-nav-drawer>
